--- a/work.html
+++ b/work.html
@@ -35,14 +35,12 @@
                   <div class="container-fluid">
                     <div class="row" id="row-2"> 
                     <div class="card" id="work">
-                      <video controls>
-                        <source src="images/strapi.mov" type="video/mp4">
-                      </video>                     
+                      <img class="card-img-top" id="X" src="images/e-commerce.png" alt="SM logo">           
                        <div class="card-body">
                         <div class="text-center">
                         <h5 class="card-title">Strapi e-commerce website</h5>
                         </div>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Semester Project 2: For this project our main task was to create an e-commerce store</p>
                       </div>
                     </div>
                     <div class="card" id="work"> 
