--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
                   <div class="container-fluid">
                     <div class="row" id="row-2"> 
                     <div class="card" id="work">
-                      <img class="card-img-top" id="X" src="images/e-commerce.png" alt="SM logo">           
+                      <img class="card-img-top" id="X" src="images/e-commerce.png" alt="e-commerce">           
                        <div class="card-body">
                         <div class="text-center">
                         <h5 class="card-title">Strapi e-commerce website</h5>
