--- a/work.html
+++ b/work.html
@@ -35,12 +35,13 @@
                   <div class="container-fluid">
                     <div class="row" id="row-2"> 
                     <div class="card" id="work">
-                      <img class="card-img-top" id="X" src="images/e-commerce.png" alt="e-commerce">           
-                       <div class="card-body">
+                      <img class="card-img-top" id="X" src="images/e-commerce.png" alt="Strapi e-commerce">           
+                      <div class="card-body">
+                        <h5 class="card-title">Semester Project 2</h5>
+                        <p class="card-text">For this project our main task was to create our own strapi API and use this for an e-commerce store with the data we've created.</p>
                         <div class="text-center">
-                        <h5 class="card-title">Strapi e-commerce website</h5>
-                        </div>
-                        <p class="card-text">Semester Project 2: For this project our main task was to create an e-commerce store</p>
+                        <a href="https://github.com/yuntal/Yunus-Talay-semester-project-2" class="hbtn hb-fill-right">Launch</a>
+                      </div>
                       </div>
                     </div>
                     <div class="card" id="work"> 
@@ -57,7 +58,7 @@
                       <img class="card-img-top" id="X" src="images/flowers.png" alt="Flower Power">
                       <div class="card-body">
                         <h5 class="card-title">JS Frameworks CA</h5>
-                        <p class="card-text">For this assignment our task was to demonstrate an API call, and be able to log in with a JWT token.</p>
+                        <p class="card-text">For this assignment our task was to demonstrate an API call with a details page, and be able to log in  successfully with a JWT token.</p>
                         <div class="text-center">
                         <a href="https://github.com/Noroff-FEU-Assignments/js-frameworks-course-assignment-yuntal" class="hbtn hb-fill-right">Launch</a>
                       </div>
