--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                         <h3 class="student12"> I'm a frontend student based in Norway.</h3>
                       <p class="info1"> I'm a soon to become frontend developer with a background in history. In other words, i went from being a historian to becoming a developer. My curiosity for details and love for computers, is what brought me where I am today.   
                         </p>
-                        <p class="cv"><a href="cv/resume.pdf">Curriculum Vitae</a><i class="fa fa-paper-plane" aria-hidden="true"></i>
+                        <p class="cv"><a href="cv/resume-new.pdf">Curriculum Vitae</a><i class="fa fa-paper-plane" aria-hidden="true"></i>
                       </div>
                   </div>
                   </p>                  
