--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                           <img class="img-fluid" src="images/new-last.png">
                           <div id="social"> 
                             <a href="https://www.linkedin.com/in/yunus-talay-324074191/" id="IN-one"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/yuntal?tab=repositories" id="GH-one"><i class="fab fa-github-square"></i></a>
+                            <a href="https://github.com/yuntal" id="GH-one"><i class="fab fa-github-square"></i></a>
                         </div>
                         </div>
                     </div>
