--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                                 <p class="pr-5 text-dark-50" id="name">My name is Yunus. I'm a 29 year old frontend student based in Stavanger, Norway</p>
                                 <p class="pr-5 text-dark-50" id="link">You can find me on LinkedIn and Github </p>
                                 <a href="https://www.linkedin.com/in/yunus-talay-324074191/" id="IN"><i class="fab fa-linkedin"></i></a>
-                                <a href="https://github.com/yuntal?tab=repositories" id="GH"><i class="fab fa-github-square"></i></a>
+                                <a href="https://github.com/yuntal" id="GH"><i class="fab fa-github-square"></i></a>
                               </div>
                               <div class="col-lg-3 col-xs-12 links">
                                 <h4 class="mt-lg-0 mt-sm-3" id="links">Links</h4>
